--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ description = "source lines of count"
 
 [dependencies]
 clap = "2.20.5"
+log = "0.4.22"
 num-format = "0.4.0"
 num_cpus = "1.16.0"
 serde = "*"
